--- a/clock.html
+++ b/clock.html
@@ -7,7 +7,7 @@
 
 	<body>
 		<h1>Cat Clock</h1>
-		<p class='content-1'><strong>IS IT TIME YET??<strong></p>
+		<p class='content-1'><strong>What time is it?<strong></p>
 		<div id='clock'></div>
 
 		<div class='img'>
@@ -15,6 +15,7 @@
 		</div>
 
 		<form class='form' action="clock.js">
+			
 			<div class="row">
 			<label class='label-wakeup'>SET WAKE UP TIME: </label>
 			<select id='label-wakeup'>
@@ -104,13 +105,15 @@
       <option value="24">12 AM - 1AM</option>option>
 			</select>
 			</div>
+
 		</form>
 
 		<div class="wrapper">
 			<button id='end-button'><strong>PARTY TIME!</strong></button>
 		</div>
 
-		<footer class='footer'>&copySKILLCRUSH 2020</footer>
+		<footer class='footer'>&copyYi Li Ng 2020</footer>
+
 
 		<script type="text/javascript" src="clock.js"></script> 
 	</body>
